# Polynomial-Arithmetic-Calculator

./: .gitignore  CMakeLists.txt  README.md
assets/: README.md
assets/web/: app.js  index.html  styles.css
cmake/: EmbedWebAssets.cmake
docs/: DEVELOPER.md
include/polycalc/: Application.hpp  Version.hpp
include/polycalc/console/: ConsoleUI.hpp  Terminal.hpp
include/polycalc/core/: Formatting.hpp  Node.hpp  Polynomial.hpp  PolynomialParser.hpp
include/polycalc/gui/: HelpWindow.hpp  MainWindow.hpp  WinUtil.hpp
include/polycalc/services/: HistoryManager.hpp  PolynomialGenerator.hpp  PolynomialStorage.hpp  Timer.hpp
include/polycalc/web/: ApiServer.hpp  FileDialog.hpp  HttpServer.hpp  Json.hpp  Utf8.hpp  Win32.hpp
src/: Application.cpp  CMakeLists.txt  main.cpp
src/console/: ConsoleUI.cpp  Terminal.cpp
src/core/: Formatting.cpp  Polynomial.cpp  PolynomialParser.cpp
src/gui/: HelpWindow.cpp  MainWindow.cpp  WinUtil.cpp
src/services/: HistoryManager.cpp  PolynomialGenerator.cpp  PolynomialStorage.cpp  Timer.cpp
src/web/: ApiServer.cpp  FileDialog.cpp  HttpServer.cpp  Json.cpp  Utf8.cpp
tests/: CMakeLists.txt  TestFramework.hpp  main_test.cpp  test_application.cpp  test_console.cpp  test_formatting.cpp  test_history_manager.cpp  test_parser.cpp  test_polynomial.cpp  test_services.cpp  test_version.cpp
